- separated some parts of the class into different files:
	NotedumpMain.cs, Form1.cs (legacy), NotedumpMenuStrip.cs
	source (can extend partial class into multiple files using "partial" keyword):
	http://stackoverflow.com/questions/144783/c-sharp-classes-in-separate-files
- started implementing richtextbox
	- need to read and output file into box


2016.11.23
- working on file I/O
	- turning text file into a resource and accessing it as if it is on the file directory
		- alternative: text file resource is treated as string and can be directly loaded into richtextbox
		http://stackoverflow.com/questions/6428881/how-to-insert-a-string-into-a-richtextbox
	- todo: save richtextbox contents to resource
		- "Save All and Exit" flushes out content in active window and closes program
		- save as stream, output to resource?


2016.11.24
- moving to hardcoded tabs instead of dynamic tab system
- added richtextbox to all "sub"tabs by doubleclick


2016.11.25
- changed "+" tab event handler for Main, Music, and Links to single event handler
	- dynamic tab system is dead, code will remain for future use
- singular richtextbox event handler created for Music and Links
- movie rtb has its own event handler


2016.11.28
- "to do" tab and "to do" + "reminders" subtabs created
- attached rtb event handler to "to do" mouse doubleclick
- temporarily turning "Flush" button into RTB resource saver


2016.11.29
- in process of outputting rtb contents to associated resource file


2016.11.30
- using rtb.LoadFile(...) instead of "rtb.Text = Properties..."
	- on first build, loads contents from original resource content file
	- on subsequent runs+loads, saved content persists and is loaded into rtb
	- "rtb.Text = Properties..." load the string inside the original resource file, rather than persistent file
	- cleaning the solution will deploy the resource files again


2016.12.01
- finished "Save All" and "Save All and Exit"